--- a/Stock Price Predictor Model/requirements.txt
+++ b/Stock Price Predictor Model/requirements.txt
@@ -1,7 +1,8 @@
-keras==3.6.0
+tensorflow
+keras
 matplotlib==3.10.0
-pandas
-numpy
+numpy<2
+pandas==2.2.3
 scikit_learn==1.6.1
 streamlit==1.39.0
 yfinance==0.2.52
